# halo2-keccak-stable

./: Cargo.toml  README.md
src/: circuit.rs  io.rs  lib.rs  serialisation.rs  tests.rs
src/util/: assign_value.rs  eth_types.rs  expression.rs  mod.rs
src/vanilla/: keccak_packed_multi.rs  util.rs
tests/: integration_test.rs
